# highlights

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Procfile  README.md  app.json  build.rs  docker-compose.yml  example_config.toml  heroku_start.sh  pre-commit  rustfmt.toml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: audit.yml  build.yml  release.yml  rustfmt.yml
jaeger-db-setup/: Dockerfile  README.md  create.sh  v004.cql.tmpl
src/: commands.rs  db.rs  error.rs  global.rs  highlighting.rs  main.rs  monitoring.rs  reporting.rs  responses.rs  settings.rs  util.rs
src/bot/: highlighting.rs  mod.rs  responses.rs  util.rs
src/bot/commands/: blocks.rs  keywords.rs  mod.rs  mutes.rs  opt_out.rs  util.rs
src/commands/: blocks.rs  keywords.rs  mod.rs  mutes.rs  opt_out.rs  util.rs
src/dashboard/: mod.rs  session.rs
src/dashboard/assets/: index.html  mod.rs
src/db/: backup.rs  block.rs  channel_keyword.rs  guild_keyword.rs  ignore.rs  keyword.rs  mod.rs  mute.rs  notification.rs  opt_out.rs  user_state.rs
src/db/migration/: m2022_08_04_000001_init.rs  m2023_01_08_000001_composite_notification_key.rs  m2023_05_18_000001_rename_pkey_index.rs  mod.rs
src/logging/: mod.rs  monitoring.rs  reporting.rs
