[package]
name = "highlights"
version = "2.0.0"
authors = ["ThatsNoMoon <git@thatsnomoon.dev>"]
repository = "https://github.com/ThatsNoMoon/highlights"
license = "OSL-3.0"
edition = "2021"

[features]
default = ["bot", "monitoring", "reporting"]
bot = [
    "lazy-regex",
    "indoc",
    "serde_json",
    "serenity/builder",
    "serenity/cache",
    "serenity/client",
    "serenity/collector",
    "serenity/gateway",
    "serenity/http",
    "serenity/unstable_discord_api"
]
monitoring = [
    "tracing-opentelemetry",
    "opentelemetry",
    "opentelemetry-jaeger"
]
reporting = ["reqwest", "url"]

[dependencies]
tokio = { version = "1.0", features = ["macros", "rt", "rt-multi-thread", "time", "fs"] }
rusqlite = { version = "0.25", features = ["bundled", "backup"] }
r2d2 = "0.8"
r2d2_sqlite = "0.18"
once_cell = "1.4"
lazy-regex = { version = "2.2", optional = true }
chrono = "0.4"
indoc = { version = "1.0", optional = true }
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-opentelemetry = { version = "0.17", optional = true }
opentelemetry = { version = "0.17", features = ["rt-tokio"], optional = true }
opentelemetry-jaeger = { version = "0.16", features = ["rt-tokio"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
config = { version = "0.11", default-features = false, features = ["toml"] }
url = { version = "2.2", features = ["serde"], optional = true }
anyhow = "1.0"
futures-util = "0.3"
tinyvec = { version = "1.5", features = ["alloc"] }
rand = "0.7"

[dependencies.serenity]
version = "0.10"
default-features = false
features = ["model", "rustls_backend"]

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["blocking", "rustls-tls", "json"]
optional = true
