[package]
name = "highlights"
version = "2.0.0"
authors = ["ThatsNoMoon <git@thatsnomoon.dev>"]
repository = "https://github.com/ThatsNoMoon/highlights"
license = "OSL-3.0"
edition = "2021"

[features]
default = ["bot", "monitoring", "reporting"]
bot = [
    "indoc",
    "lazy-regex",
    "serde_json",
    "serenity/builder",
    "serenity/cache",
    "serenity/client",
    "serenity/collector",
    "serenity/gateway",
    "serenity/http",
    "serenity/unstable_discord_api",
]
monitoring = [
    "opentelemetry",
    "opentelemetry-jaeger",
    "tracing-opentelemetry",
]
reporting = ["reqwest", "url"]

[dependencies]
anyhow = "1.0"
chrono = "0.4"
futures-util = "0.3"
indoc = { version = "1.0", optional = true }
lazy-regex = { version = "2.2", optional = true }
once_cell = "1.4"
r2d2 = "0.8"
r2d2_sqlite = "0.20"
rand = "0.8"
rusqlite = { version = "0.27", features = ["bundled", "backup"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
tinyvec = { version = "1.5", features = ["alloc"] }
tracing = "0.1"
tracing-opentelemetry = { version = "0.17", optional = true }
tracing-subscriber = "0.3"

[dependencies.config]
version = "0.13"
default-features = false
features = ["toml"]

[dependencies.opentelemetry]
version = "0.17"
features = ["rt-tokio"]
optional = true

[dependencies.opentelemetry-jaeger]
version = "0.16"
features = ["rt-tokio"]
optional = true

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["blocking", "rustls-tls", "json"]
optional = true

[dependencies.serenity]
version = "0.11"
default-features = false
features = ["model", "rustls_backend"]

[dependencies.tokio]
version = "1.0"
features = ["macros", "rt", "rt-multi-thread", "time", "fs"]

[dependencies.url]
version = "2.2"
features = ["serde"]
optional = true
